##
## $Id: Makefile.am,v 1.12 2005/11/11 15:04:28 ralf Exp $
##

ACLOCAL_AMFLAGS = -I aclocal

DISTCLEANFILES =
CLEANFILES =

noinst_HEADERS = support/include/tmacros.h support/include/buffer_test_io.h

SUBDIRS = @subdirs@

EXTRA_DIST = PROBLEMS

include $(top_srcdir)/automake/subdirs.am
include $(top_srcdir)/automake/local.am
