##
## $Id: Makefile.am,v 1.19 2009/10/19 10:58:30 thomas Exp $
##

ACLOCAL_AMFLAGS = -I ../aclocal

SUBDIRS = bspcmdline01 cpuuse malloctest heapwalk putenvtest monitor \
    monitor02 rtmonuse stackchk stackchk01 termios termios01 termios02 \
    rtems++ tztest block01

include $(top_srcdir)/../automake/subdirs.am
include $(top_srcdir)/../automake/local.am
