# $Id: Makefile.am,v 1.2 2010/05/21 16:16:56 ralf Exp $

SUBDIRS =
SUBDIRS += arm
SUBDIRS += avr
SUBDIRS += bfin
SUBDIRS += h8300
SUBDIRS += i386
SUBDIRS += lm32
SUBDIRS += m32c
SUBDIRS += m32r
SUBDIRS += m68k
SUBDIRS += mips
SUBDIRS += mipstx39
SUBDIRS += powerpc
SUBDIRS += sh
SUBDIRS += sparc

SUBDIRS += sparc64
